# hello_rust_lambda

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
scripts/: build.sh  create_function.sh  test.sh  update_function.sh
src/: dao.rs  errors.rs  main.rs  model.rs
