[package]
name = "hello_rust_lambda"
version = "0.1.0"
authors = ["Jack Wright <ayax79@gmail.com"]
autobins = false

[dependencies]
lambda_runtime = "^0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
env_logger = "^0.6"
rusoto_core = "0.35"
rusoto_dynamodb = "0.35"
rusoto_credential = "0.14"

[dev-dependencies]
testcontainers = "0.3.1"
dynamodb_testcontainer = "0.1.0"
pretty_env_logger = "0.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"