[package]
name = "hello_rust_lambda"
version = "0.1.0"
authors = ["Jack Wright <ayax79@gmail.com"]
autobins = false
edition = "2018"

[dependencies]
lambda_runtime = "^0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "^1"
log = "^0.4"
env_logger = "^0.6"
rusoto_core = "0.39"
rusoto_dynamodb = "0.39"
rusoto_credential = "0.39"
simple-error = "0.1"

[dev-dependencies]
testcontainers = "0.7"
pretty_env_logger = "0.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"